added logo to template

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,6 +18,11 @@ $fa-font-path: "../fonts/webfonts" !default;
 
 /* /EDIT APARTMENTS */
 
+.Boologo{
+    width: 75px;
+    height: 60px;
+    object-fit: cover;
+}
 /* ADDRESS SEARCH */
 .userAddressHints {
     list-style: none;
